--- a/css/go.css
+++ b/css/go.css
@@ -73,21 +73,36 @@ input {
 .search {
     position: relative;
     width: 99%;
-    max-width: 94%;
+    max-width: 100%;
+    margin-top: 3em;
+    margin-bottom: 2em;
+    margin-left: -3em;
 }
-@media only screen and (min-width : 900px ) {
+/* @media only screen and (min-width : 900px ) {
+.search img {
+    display: inline-block;
+    position: relative;
+    
+}
+}
+*
+form {
+    border: 2px solid orangered;
+}
+*/
 .search img {
     position: absolute;
-    top:1.1em;
-    left: 65%;
-}
+    top: .9em;
+    left: 99%;
 }
 input[type=text] {
     border-radius: 20px;
+    display: inline-block;
+    width: 100%;
     border: 1.5px solid rgb(237, 240, 235);
     outline: none;
     height: 34px;
-    margin-left: 34%;
+    margin: 0 auto;
     padding: 8px;
     padding-left: 25px;
 }
