--- a/css/go.css
+++ b/css/go.css
@@ -77,6 +77,8 @@ input {
     margin-top: 3em;
     margin-bottom: 2em;
     margin-left: -3em;
+    padding: left 6em;
+    padding-right: 6em;
 }
 /* @media only screen and (min-width : 900px ) {
 .search img {
@@ -94,17 +96,19 @@ form {
     position: absolute;
     top: .9em;
     left: 99%;
+    z-index: 500;
 }
 input[type=text] {
     border-radius: 20px;
-    display: inline-block;
-    width: 100%;
+    display: block;
+    width: 50%;
     border: 1.5px solid rgb(237, 240, 235);
     outline: none;
     height: 34px;
     margin: 0 auto;
     padding: 8px;
     padding-left: 25px;
+    z-index: 1;
 }
 p {
     text-align: center;
